--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Getting Started Example",
-  "version": "1.0",
-  "description": "Build an Extension!",
+  "name": "Sentiment Analysis",
+  "version": "0.1",
+  "description": "Use data driven sentiment analysis to analyze text.",
   "permissions": ["tabs", "activeTab", "declarativeContent", "storage"],
   "options_page": "options.html",
   "background": {
